--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -41,15 +41,16 @@ nav {
 
 #bio {
   display: flex;
-  background: black;
-
+  background: #050608;
+  padding: 50px 0;
+  height: 100vh;
 
   p{
     width: 50%;
     color: white;
     line-height: 1.5;
-    font-size: 1.2rem;
-    padding: 50px;
+    font-size: 1rem;
+    padding: 0 50px;
   }
   .logoCentered{
 
@@ -57,5 +58,6 @@ nav {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0 50px;
   }
 }
