added albums and footer

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
-  background: #5A7070;
+  background: #050608;
   // background: purple;
 }
 
@@ -23,6 +23,7 @@ nav {
     font-size: 1.5rem;
     font-weight: 300;
     padding: 0 10px;
+    text-shadow: 1px 2px black;
   }
 }
 
@@ -113,11 +114,11 @@ nav {
   }
 }
 
-#music {
+.music {
   padding: 80px 0;
   background: linear-gradient(45deg, rgba(131,42,87,1) 0%, rgba(101,130,141,1) 89%);
   color: white;
-  text-shadow: 2px 3px black;
+  text-shadow: 2px 2px black;
   border-top: solid;
   .container{
     display: flex;
@@ -172,5 +173,33 @@ nav {
       border: solid;
       border-width: thin;
     }
+  }
+}
+
+#musicTwo {
+  background: linear-gradient(45deg, rgba(183,92,49,1) 20%,rgba(232,232,232,1) 100%);
+}
+
+#picture{
+  border-top: solid;
+  border-color: white;
+  background-image: linear-gradient(to bottom, rgba(232,232,232,0) 0%,rgba(172,172,172,0) 26%,rgba(0,0,0,0.8) 100%), url('/img/thebiohead.jpg');
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+}
+
+footer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding: 10px 40px;
+  height: 100vh;
+  width: 100%;
+  .foot{
+    font-size: 1rem;
+    color: white;
+    opacity: 0.9;
   }
 }
